# icon-theme-linux-development

./: .directory  Noobslab icon themes PPA.txt  README.md  ubuntustudio icon tema apunta a elementary-xfce-dark.txt
Actualizar cache de iconos/: gtk - How do I refresh the icon cache - Ask Ubuntu.desktop  (+1 more)
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/: .directory  AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.in  gnome-themes-extras.spec  gnome-themes-extras.spec.in  license_lgpl
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/: Makefile.am  Makefile.in  index.theme  index.theme.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/gtk-2.0/: Makefile.am  Makefile.in  iconrc  iconrc.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/icons/: Makefile.am  Makefile.in  index.theme  index.theme.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/icons/scalable/: Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/icons/scalable/apps/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/icons/scalable/devices/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/icons/scalable/emblems/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/icons/scalable/filesystems/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/icons/scalable/mimetypes/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/icons/scalable/stock/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Amaranth/metacity-1/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Gorilla/: Makefile.am  Makefile.in  index.theme  index.theme.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Gorilla/gtk/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Gorilla/gtk-2.0/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Gorilla/icons/: Makefile.am  Makefile.in  index.theme  index.theme.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Gorilla/icons/24x24/: .directory  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Gorilla/icons/24x24/apps/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Gorilla/icons/scalable/: Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Gorilla/icons/scalable/apps/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Gorilla/metacity-1/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Lush/: Makefile.am  Makefile.in  index.theme  index.theme.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Lush/gtk-2.0/: Makefile.am  Makefile.in  gtkrc  iconrc  iconrc.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Lush/icons/: Makefile.am  Makefile.in  index.theme  index.theme.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Lush/icons/scalable/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Lush/metacity-1/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Nuvola/: Makefile.am  Makefile.in  index.theme  index.theme.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Nuvola-old/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Nuvola-old/metacity-1/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Nuvola/gtk-1.0/: Makefile.am  Makefile.in  gtkrc
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Nuvola/gtk-2.0/: Makefile.am  Makefile.in  iconrc.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Nuvola/icons/: Makefile.am  Makefile.in  index.theme  index.theme.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Nuvola/icons/scalable/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Nuvola/metacity-1/: .directory  Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Wasp/: .directory  Makefile.am  Makefile.in  index.theme  index.theme.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Wasp/gtk-2.0/: Makefile.am  Makefile.in  gtkrc  iconrc  iconrc.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Wasp/icons/: Makefile.am  Makefile.in  index.theme  index.theme.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Wasp/icons/scalable/: Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/Wasp/metacity-1/: Makefile.am  Makefile.in
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/m4/CVS/: Entries  Repository  Root
nuvola/source/gnome-themes-extras-0.9.0 (nuvola)/gnome-themes-extras-0.9.0/po/: ChangeLog  POTFILES.in  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  ja.po  ko.po  lt.po  ne.po  nl.po  no.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  rw.po  sk.po  sq.po  sr.po  sr@Latn.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
(+132 files in other folders)
