themedir = $(datadir)/themes/Amaranth/metacity-1

theme_DATA=  \
	left-side.png \
	title-bar.png \
	wm-max.svg \
	wm-min.svg \
	wm-close-focus.svg \
	wm-menu-focus.svg \
	wm-restore.svg \
	metacity-theme-1.xml \
	wm-close.svg \
	wm-menu.svg \
	right-side.png \
	wm-max-focus.svg \
	wm-min-focus.svg
EXTRA_DIST = $(theme_DATA)
