icondir = $(datadir)/icons/Amaranth/scalable/apps
NULL = 
icon_DATA = \
	abiword_48.svg \
	accessibility-keyboard-capplet.svg \
	accessories.svg \
	advanced-directory.svg \
	apacheconf.svg \
	blender.svg \
	camera.svg \
	disks.svg \
	downloadmanager.svg \
	email.svg \
	evolution.svg \
	file-manager.svg \
	file-roller.svg \
	gaim.svg \
	gedit.svg \
	gftp.svg \
	gimp.svg \
	gnome-aisleriot.svg \
	gnome-applications.svg \
	gnome-calc3.svg \
	gnome-cardgame.svg \
	gnome-cdplayer.svg \
	gnome-devel.svg \
	gnome-globe.svg \
	gnome-graphics.svg \
	gnome-help.svg \
	gnome-home.svg \
	gnome-icq.svg \
	gnome-joystick.svg \
	gnome-lockscreen.svg \
	gnome-logo.svg \
	gnome-media-player.svg \
	gnome-mixer.svg \
	gnome-multimedia.svg \
	gnome-pdf.svg \
	gnome-settings.svg \
	gnome-terminal.svg \
	gnumeric.svg \
	gucharmap.svg \
	hwbrowser.svg \
	icon-system-tools.svg \
	icon-update.svg \
	monitor.svg \
	mouse-capplet.svg \
	mozilla-icon.svg \
	my-computer.svg \
	netscape.svg \
	opera.svg \
	rhythmbox.svg \
	sambaconf.svg \
	seti.svg \
	sound-juicer.svg \
	system-floppy.svg \
	system-search-32.svg \
	tex.svg \
	xmms.svg \
	$(NULL)
EXTRA_DIST = $(icon_DATA)

install-data-local:
	mkdir -p $(DESTDIR)$(icondir)
	cd $(DESTDIR)$(icondir) && \
	ln -sf accessories.svg redhat-accessories.svg && \
	ln -sf icon-system-tools.svg system-tools-32.svg && \
	ln -sf icon-system-tools.svg redhat-system_tools.svg && \
	ln -sf advanced-directory.svg redhat-system_settings.svg && \
	ln -sf downloadmanager.svg up2date.svg && \
	ln -sf email.svg thunderbird.svg && \
	ln -sf gnome-settings.svg redhat-preferences.svg && \
	ln -sf gnome-envelope.svg evolution-1.4.svg && \
	ln -sf gnome-home.svg redhat-home.svg && \
	ln -sf gaim.svg gnome-gaim.svg && \
	ln -sf gnome-calc3.svg gcalctool.svg && \
	ln -sf gedit.svg gedit-icon.svg && \
	ln -sf gimp.svg gnome-palette.svg && \
	ln -sf gimp.svg gnome-gimp.svg && \
	ln -sf gimp.svg wilber-icon.svg && \
	ln -sf mouse-capplet.svg gnome-mouse.svg && \
	ln -sf mozilla-icon.svg redhat-web-browser.svg && \
	ln -sf mozilla-icon.svg mozilla-star.svg && \
	ln -sf mozilla-icon.svg mozilla.svg && \
	ln -sf mozilla-icon.svg mozilla-orig.svg && \
	ln -sf gnome-applications.svg redhat-office.svg && \
	ln -sf gnome-cdplayer.svg gnome-cdplayer-icon.svg && \
	ln -sf gnome-devel.svg redhat-programming.svg && \
	ln -sf monitor.svg redhat-config-xfree86.svg && \
	ln -sf my-computer.svg gnome-starthere.svg && \
	ln -sf evolution.svg redhat-email.svg && \
	ln -sf evolution.svg evolution-1.4.svg && \
	ln -sf gnome-joystick.svg redhat-games.svg && \
	ln -sf gnome-graphics.svg redhat-graphics.svg && \
	ln -sf email.svg gnome-envelope.svg && \
	ln -sf email.svg mozilla-mail-icon.svg && \
	ln -sf gnome-globe.svg web-browser.svg && \
	ln -sf gnome-globe.svg redhat-internet.svg && \
	ln -sf gnome-logo.svg redhat-main-menu.svg && \
	ln -sf gnome-logo.svg gnome-main-menu.svg && \
	ln -sf gnome-multimedia.svg redhat-sound_video.svg && \
	ln -sf sound-juicer.svg gripicon.svg && \
	ln -sf gnome-pdf.svg xpdf.svg

uninstall-local:
	rm -rf $(DESTDIR)$(icondir)/system-tools-32.svg && \
	rm -rf $(DESTDIR)$(icondir)/evolution-1.4.svg && \
	rm -rf $(DESTDIR)$(icondir)/gnome-gaim.svg && \
	rm -rf $(DESTDIR)$(icondir)/gnome-gimp.svg && \
	rm -rf $(DESTDIR)$(icondir)/wilber-icon.svg && \
	rm -rf $(DESTDIR)$(icondir)/gnome-palette.svg && \
	rm -rf $(DESTDIR)$(icondir)/gedit-icon.svg && \
	rm -rf $(DESTDIR)$(icondir)/gnome-cdplayer-icon.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-web-browser.svg && \
	rm -rf $(DESTDIR)$(icondir)/web-browser.svg && \
	rm -rf $(DESTDIR)$(icondir)/mozilla-star.svg && \
	rm -rf $(DESTDIR)$(icondir)/mozilla.svg && \
	rm -rf $(DESTDIR)$(icondir)/mozilla-orig.svg && \
	rm -rf $(DESTDIR)$(icondir)/thunderbird.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-config-xfree86.svg  && \
	rm -rf $(DESTDIR)$(icondir)/gnome-starthere.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-email.svg && \
	rm -rf $(DESTDIR)$(icondir)/gnome-envelope.svg && \
	rm -rf $(DESTDIR)$(icondir)/evolution-1.4.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-sound_video.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-games.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-main-menu.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-graphics.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-internet.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-office.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-programming.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-preferences.svg && \
	rm -rf $(DESTDIR)$(icondir)/gedit-icon.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-accessories.svg && \
	rm -rf $(DESTDIR)$(icondir)/gcalctool.svg && \
	rm -rf $(DESTDIR)$(icondir)/gripicon.svg && \
	rm -rf $(DESTDIR)$(icondir)/gnome-mouse.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-system_tools.svg && \
	rm -rf $(DESTDIR)$(icondir)/redhat-home.svg && \
	rm -rf $(DESTDIR)$(icondir)/xpdf.svg && \
	rm -rf $(DESTDIR)$(icondir)/up2date.svg && \
	rm -rf $(DESTDIR)$(icondir)/gnome-main-menu.svg
