icondir = $(datadir)/icons/Amaranth/scalable/devices
NULL = 
icon_DATA = \
	gnome-dev-cdrom-audio.svg \
	gnome-dev-cdrom.svg \
	gnome-dev-cdwriter.svg \
        gnome-dev-dvd.svg \
	gnome-dev-floppy.svg \
	gnome-dev-harddisk.svg \
	gnome-dev-network.svg \
	gnome-dev-symlink.svg \
	gnome-dev-removable.svg \
        $(NULL)
EXTRA_DIST = $(icon_DATA)
