icondir = $(datadir)/icons/Amaranth/scalable/emblems
NULL = 
icon_DATA = \
        emblem-camera.svg \
        emblem-cool.svg \
        emblem-danger.svg \
        emblem-distinguished.svg \
        emblem-documents.svg \
	emblem-favorite.svg \
        emblem-fun.svg \
        emblem-generic.svg \
        emblem-important.svg \
        emblem-noread.svg \
        emblem-nowrite.svg \
        emblem-ohno.svg \
        emblem-package.svg \
        emblem-pictures.svg \
        emblem-relax.svg \
	emblem-sound.svg \
        emblem-symbolic-link.svg \
        emblem-multimedia.svg \
        emblem-web.svg \
        $(NULL)
EXTRA_DIST = $(icon_DATA)
