icondir = $(datadir)/icons/Amaranth/scalable/filesystems
NULL = 
icon_DATA = \
        gnome-fs-blockdev.svg \
	gnome-fs-client.svg \
        gnome-fs-directory-accept.svg \
        gnome-fs-directory-accept.icon \
        gnome-fs-directory.svg \
        gnome-fs-directory.icon \
        gnome-fs-executable.svg \
        gnome-fs-home.svg \
        gnome-fs-loading-icon.svg \
	gnome-fs-network.svg \
        gnome-fs-regular.svg \
	gnome-fs-server.svg \
        gnome-fs-smb.svg \
        gnome-fs-trash-empty.svg \
        gnome-fs-trash-full.svg \
        $(NULL)
EXTRA_DIST = $(icon_DATA)
