icondir = $(datadir)/icons/Amaranth/scalable/stock
NULL =
icon_DATA = \
	applets-screenshooter.svg \
        gnome-logo.svg \
	stock_about.svg \
	stock_cdrom.svg \
	stock_copy.svg \
	stock_cut.svg \
	stock_delete.svg \
	stock_dialog_error.png \
	stock_dialog_info.png \
	stock_dialog_warning.png \
	stock_execute.svg \
	stock_floppy.svg \
	stock_go-back.svg \
	stock_go-forward.svg \
	stock_go-down.svg \
	stock_go-up.svg \
	stock_gtk-sort-ascending.svg \
	stock_gtk-sort-descending.svg \
	stock_help.svg \
	stock_home.svg \
	stock_lockscreen.svg \
	stock_new.svg \
	stock_open.svg \
	stock_paste.svg \
	stock_preferences.svg \
	stock_print-preview.svg \
	stock_print.svg \
	stock_quit.svg \
	stock_redo.svg \
	stock_refresh.svg \
	stock_replace.svg \
	stock_reset.svg \
	stock_save_as.svg \
	stock_screenshot.svg \
	stock_search.svg \
	stock_stop.svg \
	stock_undo.svg \
	stock_volume-0.svg \
	stock_volume-med.svg \
	stock_volume-max.svg \
	stock_volume-min.svg \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
