icondir = $(datadir)/icons/Gorilla/scalable/filesystems
NULL = 
icon_DATA = \
        gnome-fs-blockdev.svg \
        gnome-fs-bookmark-missing.svg \
        gnome-fs-bookmark.svg \
	gnome-fs-client.svg \
        gnome-fs-chardev.svg \
        gnome-fs-directory-accept.svg \
        gnome-fs-directory-accept.icon \
        gnome-fs-directory-visiting.svg \
        gnome-fs-directory-visiting.icon \
        gnome-fs-directory.svg \
        gnome-fs-directory.icon \
        gnome-fs-ftp.svg \
        gnome-fs-home.svg \
        gnome-fs-loading-icon.svg \
        gnome-fs-network.svg \
        gnome-fs-nfs.svg \
        gnome-fs-regular.svg \
        gnome-fs-server.svg \
        gnome-fs-smb.svg \
        gnome-fs-ssh.svg \
        gnome-fs-trash-empty.svg \
        gnome-fs-trash-full.svg \
        gnome-fs-web.svg \
        $(NULL)
EXTRA_DIST = $(icon_DATA)


install-data-local:
	mkdir -p $(DESTDIR)$(icondir)
	cd $(DESTDIR)$(icondir)

uninstall-local:
