icondir = $(datadir)/icons/Gorilla/scalable/stock
icon_DATA = \
gtk-about.svg \
gtk-add.svg \
gtk-attachment.svg \
gtk-balance.svg \
gtk-bold.svg \
gtk-book.svg \
gtk-cancel.svg \
gtk-cdrom.svg \
gtk-clear.svg \
gtk-close.svg \
gtk-connect.svg \
gtk-convert.svg \
gtk-copy.svg \
gtk-cut.svg \
gtk-delete.svg \
gtk-dialog-error.svg \
gtk-dialog-info.svg \
gtk-dialog-question.svg \
gtk-dialog-warning.svg \
gtk-disconnect.svg \
gtk-dnd.svg \
gtk-dnd-multiple.svg \
gtk-edit.svg \
gtk-execute.svg \
gtk-export.svg \
gtk-find.svg \
gtk-find-and-replace.svg \
gtk-floppy.svg \
gtk-go-back-ltr.svg \
gtk-go-down.svg \
gtk-go-forward-ltr.svg \
gtk-goto-first-ltr.svg \
gtk-goto-last-ltr.svg \
gtk-goto-top.svg \
gtk-go-up.svg \
gtk-help.svg \
gtk-home.svg \
gtk-import.svg \
gtk-index.svg \
gtk-insert-image.svg \
gtk-insert-object.svg \
gtk-insert-table.svg \
gtk-italic.svg \
gtk-jump-to.svg \
gtk-justify-center.svg \
gtk-justify-fill.svg \
gtk-justify-left.svg \
gtk-justify-right.svg \
gtk-line-in.svg \
gtk-mic.svg \
gtk-missing-image.svg \
gtk-new.svg \
gtk-no.svg \
gtk-ok.svg \
gtk-open.svg \
gtk-open-book.svg \
gtk-paste.svg \
gtk-preferences.svg \
gtk-print.svg \
gtk-print-preview.svg \
gtk-properties.svg \
gtk-quit.svg \
gtk-redo.svg \
gtk-refresh.svg \
gtk-remove.svg \
gtk-reset.svg \
gtk-revert-to-saved.svg \
gtk-save.svg \
gtk-save-as.svg \
gtk-select-color.svg \
gtk-select-font.svg \
gtk-sort-ascending.svg \
gtk-sort-descending.svg \
gtk-spell-check.svg \
gtk-stop.svg \
gtk-strikethrough.svg \
gtk-undelete.svg \
gtk-underline.svg \
gtk-undo.svg \
gtk-volume.svg \
gtk-yes.svg \
gtk-zoom-100.svg \
gtk-zoom-fit.svg \
gtk-zoom-in.svg \
gtk-zoom-out.svg \
stock_volume-max.svg \
stock_volume-min.svg \
stock_volume-0.svg \
stock_volume-med.svg \
stock_volume-mute.svg
 
EXTRA_DIST = $(icon_DATA)
