icondir = $(datadir)/icons/Lush/scalable/stock
NULL = 
icon_DATA = \
        back.svg \
	cancel.svg \
	down.svg \
	editcopy.svg \
	editpaste.svg \
	edittrash.svg \
	filenew.svg \
	fileopen.svg \
	filesaveas.svg \
	filesave.svg \
	forward.svg \
	gohome.svg \
	help.svg \
	info.svg \
	reload.svg \
	stock_cut.svg \
	stock_delete.svg \
	stock_quit.svg \
	stock_redo.svg \
	stock_undo.svg \
	up.svg \
	print.svg \
	$(NULL)
EXTRA_DIST = $(icon_DATA)

install-data-local:

uninstall-local:
	
