icondir = $(datadir)/icons/Nuvola/scalable/stock
icon_DATA = \
        applets-screenshooter.svg \
	bookmark_add.svg \
	bookmark.svg \
	folder_new.svg \
	gaim_insert-smiley-small.svg \
	gaim_send-im.svg \
	gnome-logo.svg \
	gtk-about.svg \
	gtk-add.svg \
	gtk-attachment.svg \
	gtk-bold.svg \
	gtk-brokenimage.svg \
	gtk-cdrom.svg \
	gtk-copy.svg \
	gtk-cut.svg \
	gtk-delete.svg \
	gtk-dialog-authentication.svg \
	gtk-dialog-info.svg \
	gtk-dialog-warning.svg \
	gtk-directory.svg \
	gtk-edit.svg \
	gtk-execute.svg \
	gtk-find-and-replace.svg \
	gtk-find.svg \
	gtk-floppy.svg \
	gtk-go-back-ltr.svg \
	gtk-go-down.svg \
	gtk-go-forward-ltr.svg \
	gtk-goto-first-ltr.svg \
	gtk-goto-last-ltr.svg \
	gtk-go-up.svg \
	gtk-harddisk.svg \
	gtk-help.svg \
	gtk-home.svg \
	gtk-mail-send.svg \
	gtk-media-forward-ltr.svg \
	gtk-media-next-ltr.svg \
	gtk-media-play-ltr.svg \
	gtk-media-previous-ltr.svg \
	gtk-media-rewind-ltr.svg \
	gtk-media-stop.svg \
	gtk-new.svg \
	gtk-ok.svg \
	gtk-open.svg \
	gtk-paste.svg \
	gtk-print-preview.svg \
	gtk-print.svg \
	gtk-quit.svg \
	gtk-redo-ltr.svg \
	gtk-refresh.svg \
	gtk-reload.svg \
	gtk-revert-to-saved-ltr.svg \
	gtk-save-as.svg \
	gtk-save.svg \
	gtk-stop.svg \
	gtk-strikethrough.svg \
	gtk-underline.svg \
	gtk-undo-ltr.svg \
	gtk-zoom-100.svg \
	gtk-zoom-fit.svg \
	gtk-zoom-in.svg \
	gtk-zoom-out.svg \
	panel-lockscreen.svg \
	searchtool.svg	\
	stock_alarm.svg \
	stock_desktop.svg \
	stock_keyring.svg \
	stock_post_message.svg \
	stock_volume-0.svg \
	stock_volume-max.svg \
	stock_volume-med.svg \
	stock_volume-min.svg \
	stock_volume-mute.svg \
	stock_volume.svg
	
EXTRA_DIST = $(icon_DATA)
