icondir = $(datadir)/icons/Wasp/scalable/devices
NULL = 
icon_DATA = \
	gnome-dev-camera.svg \
	gnome-dev-cdrom-audio.svg \
	gnome-dev-cdrom.svg \
	gnome-dev-cdwriter.svg \
        gnome-dev-dvd.svg \
	gnome-dev-firewire.svg \
	gnome-dev-floppy.svg \
	gnome-dev-harddisk.svg \
	gnome-dev-palm.svg \
	gnome-dev-printer.svg \
	gnome-dev-removeable.svg \
	gnome-dev-zipdisk.svg \
        gnome-dev-symlink.svg \
	gnome-dev-tape.svg \
	gnome-dev-tv.svg \
	gnome-dev-usb.svg \
	gnome-dev-zipdisk.svg \
        gnome-dev-network.svg \
	$(NULL)
EXTRA_DIST = $(icon_DATA)
